# Zgy0x01_QTrace

./: .gitignore  README.md  README_en.md  README_zh.md  inject.js  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/f/qbdi/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/main/cpp/: CMakeLists.txt  jnitrace.cpp  libctrace.cpp  logger.cpp  native_main.cpp  qbdihook.cpp  vm.cpp
nativelib/src/main/cpp/hook/: HookUtils.cpp  TraceLogger.cpp  TraceUtils.cpp
nativelib/src/main/cpp/include/: HookUtils.h  TraceLogger.h  TraceUtils.h  jnitrace.h  libctrace.h  logger.h  qbdihook.h  vm.h
nativelib/src/main/cpp/other/: hook_shp_fp.cpp
nativelib/src/main/cpp/seccomp/: svchook.cpp  svchook.h
nativelib/src/main/cpp/third/: md5.c  md5.h  sds.h
